<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidSkeleton</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="google">Sign in with Google+</string>
    <string name="facebook">Sign in with Facebook</string>
    <string name="twitter">Sign in with Twitter</string>
    <string name="splashtxt">Cargando la aplicación, espere por favor.</string>
    <string name="personalLogin">Personal Login</string>
    <string name="btnPersonalLogin">LOGIN</string>
    <string name="remember">Remember</string>
    <string name="user">ENTER USER NAME</string>
    <string name="passwd">ENTER PASSWORD</string>
    <string name="title_activity_main_activity_blank_fragment_borrar">MainActivityBlankFragmentBorrar</string>

    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

    <style name="ButtonText2">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#2E64FE</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

    <string name="title_activity_drawer_activity_login">DrawerActivityLogin</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Logout</string>
    <string name="title_section3">Revoke</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="facebook_app_id">714569478638464</string>
    <string name="title_activity_main_activity_drawer">MainActivityDrawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>