<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"

    android:background="@drawable/balloon_bg">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:background="@drawable/linearlayout_bg"
        android:orientation="vertical"
        android:padding="10dp" >

        <!---
        <com.google.android.gms.common.SignInButton
            android:id="@+id/btnGplus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingTop="0dp"
            android:text="@string/google" /> -->
        
        <Button
            android:id="@+id/btnGplus"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/layers_gplus_button_bg"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/google" />

        <Button
            android:id="@+id/btnFb"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/layers_fb_button_bg"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/facebook" />

        <Button
            android:id="@+id/btnTwitter"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/layers_twitter_button_bg"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/twitter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/linearLayout"
        android:layout_marginTop="28dp"
        android:background="@drawable/linearlayout_bg"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="80dp"
            android:text="@string/personalLogin"
            android:textColor="#FF4000" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="ENTER USER NAME"
            android:paddingBottom="10dp" >

            <requestFocus />
        </EditText>

        <EditText
            android:layout_width="262dp"
            android:layout_height="match_parent"
            android:hint="ENTER PASSWORD"
            android:inputType="textPassword"
            android:paddingBottom="10dp" />

        <Button
            android:id="@+id/btnPersonalLogin"
            style="@style/ButtonText2"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:background="#F4FA58"
            android:paddingBottom="3dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/btnPersonalLogin" />
    </LinearLayout>

</RelativeLayout>

